// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/Skills/Timeline/Timeslice should correctly render the time slice by re adjusting start to fit in 1`] = `
<PlainButton
  className="be-timeline-time"
  data-resin-target="foobar"
  onClick={[Function]}
  style={
    Object {
      "left": "284px",
      "width": "6px",
    }
  }
  type="button"
/>
`;

exports[`elements/content-sidebar/Skills/Timeline/Timeslice should correctly render the time slice with no end 1`] = `
<PlainButton
  className="be-timeline-time"
  data-resin-target="foobar"
  onClick={[Function]}
  style={
    Object {
      "left": "29px",
      "width": "6px",
    }
  }
  type="button"
/>
`;

exports[`elements/content-sidebar/Skills/Timeline/Timeslice should correctly render the time slice with proper end 1`] = `
<PlainButton
  className="be-timeline-time"
  data-resin-target="foobar"
  onClick={[Function]}
  style={
    Object {
      "left": "29px",
      "width": "29px",
    }
  }
  type="button"
/>
`;
